# SEE_python

./: .gitignore  CMakeLists.txt  README.md  pysee.sln  pysee.vcxproj
all-in-one/: debug.py  pysee.pyd
see_core/src/: see_core.cpp
